syntax = "proto3";

option go_package = "github.com/TekClinic/Tasks-MicroService/tasks_protobuf";

package tasks;

service TasksService {
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse);
  rpc GetTasksIDs(GetTasksIDsRequest) returns (GetTasksIDsResponse);
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);
  rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse);
  rpc GetTasksByPatient(GetTasksByPatientRequest) returns (GetTasksByPatientResponse);
}

message GetTaskRequest {
  string token = 1;
  int32 id = 2;
}

message GetTaskResponse {
  Task task = 1;
}

message GetTasksIDsRequest {
  string token = 1;
  int32 limit = 2;
  int32 offset = 3;
  string search = 4;
}

message GetTasksIDsResponse {
  int32 count = 1;
  repeated int32 results = 2;
}

message CreateTaskRequest {
  string token = 1;
  string title = 2;
  string description = 3;
  string expertise = 4;
  int32 patient_id = 5;
}

message CreateTaskResponse {
  int32 id = 1;
}

message DeleteTaskRequest {
  string token = 1;
  int32 id = 2;
}

message DeleteTaskResponse {}

message UpdateTaskRequest {
  string token = 1;
  Task task = 2;
}

message UpdateTaskResponse {
  int32 id = 1;
}

message GetTasksByPatientRequest {
  string token = 1;
  int32 patient_id = 2;
}

message GetTasksByPatientResponse {
  repeated Task tasks = 1;
}

message Task {
  int32 id = 1;
  bool complete = 2;
  string title = 3;
  string description = 4;
  string expertise = 5;
  int32 patient_id = 6;
  string created_at = 7;
}
